Fix latency bug and alignment

--- a/ui/src/components/style/HarEntry.module.sass
+++ b/ui/src/components/style/HarEntry.module.sass
@@ -26,14 +26,10 @@
 .ruleSuccessRow
   border: 1px $success-color solid
   border-left: 5px $success-color solid
-  margin-left: 10px
-  margin-right: 3px
 
 .ruleFailureRow
   border: 1px $failure-color solid
   border-left: 5px $failure-color solid
-  margin-left: 10px
-  margin-right: 3px
 
 .service
   text-overflow: ellipsis
